update fix formatting of tips so they dont go behind the cash

--- a/frontend/tipspage/style-tips.css
+++ b/frontend/tipspage/style-tips.css
@@ -89,6 +89,11 @@ main {
   position: relative;
 }
 
+#tips-list {
+  width: 75%;
+  margin: 0 auto;
+}
+
 .right-image {
   position: absolute;
   right: 10px; 
@@ -132,21 +137,4 @@ main {
 
 .social-logo:hover {
   opacity: 0.8;
-}
-
-.iframe-container {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
-  overflow: hidden;
-}
-
-.iframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
 }
